--- a/doc/manual/R-ints.texi
+++ b/doc/manual/R-ints.texi
@@ -81,7 +81,7 @@ The current version of this document is @value{VERSION}.
 @chapter R Internal Structures
 
 This chapter is the beginnings of documentation about @R{} internal
-structures.  It is written for the R core team and others studying the
+structures.  It is written for the core team and others studying the
 code in the @file{src/main} directory.
 
 It is a work-in-progress, first begun for @R{} 2.4.0, and should be
@@ -121,8 +121,8 @@ So the basic building blocks of @R{} objects are often called
 @emph{nodes}, meaning @code{SEXPREC}s or @code{VECTOR_SEXPREC}s.
 
 Note that the internal structure of the @code{SEXPREC} is not made
-available to R Extensions: rather @code{SEXP} is an opaque pointer, and
-the internals can only be accessed by the functions provided.
+available to @R{} Extensions: rather @code{SEXP} is an opaque pointer,
+and the internals can only be accessed by the functions provided.
 
 @cindex node
 Both types of node structure have as their first three fields a 32-bit
@@ -147,11 +147,11 @@ The first five bits of the @code{sxpinfo} header specify one of up to 32
 @subsection SEXPTYPEs
 
 @cindex SEXPTYPE
-Currently @code{SEXPTYPE}s 0:10 and 13:25 are in use.  Values 11 and 12 were
-used for internal factors and ordered factors and have since been
-withdrawn.  Note that the @code{SEXPTYPE}s are stored in @code{save}d
-objects and that the ordering of the types is used, so the gap cannot
-easily be reused.
+Currently @code{SEXPTYPE}s 0:10 and 13:25 are in use.  Values 11 and 12
+were used for internal factors and ordered factors and have since been
+withdrawn.  Note that the @code{SEXPTYPE} numbers are stored in
+@code{save}d objects and that the ordering of the types is used, so the
+gap cannot easily be reused.
 
 @cindex SEXPTYPE table
 @quotation
@@ -297,9 +297,8 @@ but for no longer, and so some primitive functions can be optimized to
 avoid a copy in this case.
 
 The @code{gp} bits are by definition `general purpose'.  We label these
-from 0 to 15.  As of version 2.4.0 of R, bit 4 is turned on to mark S4
-objects.  Bits 0-3 and bits 14-15 have been used previously as described
-below (from detective work on the sources).
+from 0 to 15.  Bits 0--5 and bits 14--15 have been used as described below
+(mainly from detective work on the sources).
 
 @findex gp bits
 @findex LEVELS
@@ -357,13 +356,16 @@ finalize', 'finalize on exit').
 Bit 0 is used by the condition handling system (on a @code{VECSXP}) to
 indicate a calling handler.
 
+As of version 2.4.0 of @R{}, bit 4 is turned on to mark S4 objects.
+
 As from @R{} 2.5.0, bits 2 and 3 for a @code{CHARSXP} are used to note
-that it is known to be in Latin-1 and UTF-8 respectively.  (These are not
-usually set if it is also known to be in ASCII, since code does not need
-to know the charset to handle ASCII strings.  From @R{} 2.8.0
-it is guaranteed that they will not be set for CHARSXPs created by @R{}
-itself.)  As from @R{} 2.8.0 bit 5 is used to indicate that a CHARSXP
-is hashed by its address, that is NA_STRING or in the CHARSXP cache.
+that it is known to be in Latin-1 and UTF-8 respectively.  (These are
+not usually set if it is also known to be in ASCII, since code does not
+need to know the charset to handle ASCII strings.  From @R{} 2.8.0 it is
+guaranteed that they will not be set for @code{CHARSXP}s created by @R{}
+itself.)  As from @R{} 2.8.0 bit 5 is used to indicate that a
+@code{CHARSXP} is hashed by its address, that is @code{NA_STRING} or in
+the @code{CHARSXP} cache: this is not serialized.
 
 @node The 'data', Allocation classes, Rest of header, SEXPs
 @subsection The `data'
@@ -410,7 +412,6 @@ this is interpretation, i.e. the types are not checked.
 
 @table @code
 @item NILSXP
-
 There is only one object of type @code{NILSXP}, @code{R_NilValue}, with
 no data.
 
@@ -838,7 +839,7 @@ As we have seen, functions in @R{} come in three types, closures
 (@code{SEXPTYPE} @code{CLOSXP}), specials (@code{SPECIALSXP}) and
 builtins (@code{BUILTINSXP}).  In this section we consider when (and if)
 the actual arguments of function calls are evaluated.  The rules are
-different for the internal (special/builtin) and R-level functions
+different for the internal (special/builtin) and @R{}-level functions
 (closures).
 
 For a call to a closure, the actual and formal arguments are matched and
@@ -868,9 +869,9 @@ the values of the formal arguments in the body of the generic are
 discarded when calling the method, but @emph{actual} argument promises
 which have been forced retain the values found when they were forced.
 On the other hand, missing arguments have values which are promises to
-use the default supplied by the method and not the generic.)  If the
-method found is a special or builtin it is called with the matched
-argument list of promises (possibly already forced) used for the generic.
+use the default supplied by the method and not by the generic.)  If the
+method found is a primitive it is called with the matched argument list
+of promises (possibly already forced) used for the generic.
 
 @cindex builtin function
 @cindex special function
@@ -880,11 +881,10 @@ The essential difference@footnote{There is currently one other
 difference: when profiling builtin functions are counted as function
 calls but specials are not.} between special and builtin functions is
 that the arguments of specials are not evaluated before the C code is
-called, and those of builtins are.  In each case positional matching of
-arguments is used.  Note that being a special/builtin is separate from
-being primitive or @code{.Internal}: @code{quote} is a special
-primitive, @code{+} is a builtin primitive, @code{cbind} is a special
-@code{.Internal} and @code{grep} is a builtin @code{.Internal}.
+called, and those of builtins are.  Note that being a special/builtin is
+separate from being primitive or @code{.Internal}: @code{quote} is a
+special primitive, @code{+} is a builtin primitive, @code{cbind} is a
+special @code{.Internal} and @code{grep} is a builtin @code{.Internal}.
 
 @cindex generic, internal
 @findex DispatchOrEval
@@ -901,12 +901,12 @@ generic.
 @cindex generic, generic
 @findex DispatchGeneric
 The other way that internal functions can be generic is to be group
-generic.  All such functions are builtins (so immediately evaluate all
-their arguments), and contain a call to the C function
+generic.  Most such functions are builtins (so immediately evaluate all
+their arguments), and all contain a call to the C function
 @code{DispatchGeneric}.  There are some peculiarities over the number of
 arguments for the @code{"Math"} group generic, with some members
 allowing only one argument, some having two (with a default for the
-second) and @code{trunc} allows one or more but the default only
+second) and @code{trunc} allows one or more but the default method only
 accepts one.
 
 @menu
@@ -954,6 +954,11 @@ argument in a function call does not count as evaluation.  So
 non-yet-evaluated formal argument to see if it might be missing, which
 might involve investigating a promise and so on @dots{}.
 
+Special primitives also need to handle missing arguments, and in some
+case (e.g.@: @code{log}) that is why they are special and not
+builtin.  This is usually done by testing is an argument's value is
+@code{R_MissingArg}.
+
 @node Dot-dot-dot arguments,  , Missingness, Argument evaluation
 @subsection Dot-dot-dot arguments
 
@@ -978,6 +983,10 @@ in the value of the @code{...} symbol in the evaluation frame.
 
 Values of arguments matched to a @code{...} argument can be missing.
 
+Special primitives may need to handle @code{...} arguments: see for
+example the internal code of @code{switch} in file
+@file{src/main/builtin.c}.
+
 @node Autoprinting, The write barrier, Argument evaluation, R Internal Structures
 @section Autoprinting
 
@@ -987,8 +996,9 @@ Values of arguments matched to a @code{...} argument can be missing.
 Whether the returned value of a top-level @R{} expression is printed is
 controlled by the global boolean variable @code{R_Visible}.  This is set
 (to true or false) on entry to all primitive and internal functions
-based on the @code{eval} column of the table in @file{names.c}: the
-appropriate setting can be extracted by the macro @code{PRIMPRINT}.
+based on the @code{eval} column of the table in file
+@file{src/main/names.c}: the appropriate setting can be extracted by the
+macro @code{PRIMPRINT}.
 @findex PRIMPRINT
 
 @findex invisible
@@ -1033,7 +1043,7 @@ documented setting of @code{R_Visible} on return, unless the C code is
 allowed to change it (the exceptions above are indicated by
 @code{PRIMPRINT} having value 2).
 
-The actual autoprinting is done by @code{PrintValueEnv} in
+The actual autoprinting is done by @code{PrintValueEnv} in file
 @file{print.c}.  If the object to be printed has the S4 bit set and S4
 methods dispatch is on, @code{show} is called to print the object.
 Otherwise, if the object bit is set (so the object has a
@@ -1058,8 +1068,8 @@ level 2 collects all generations.  After 20 level-0 collections the next
 collection is at level 1, and after 5 level-1 collections at level 2.
 Further, if a level-@var{n} collection fails to provide 20% free space
 (for each of nodes and the vector heap), the next collection will be at
-level @var{n+1}.  (The R-level function @code{gc()} performs a level-2
-collection.)
+level @var{n+1}.  (The @R{}-level function @code{gc()} performs a
+level-2 collection.)
 
 A generational collector needs to efficiently `age' the objects,
 especially list-like objects (including @code{STRSXP}s).  This is done
@@ -1073,15 +1083,15 @@ be used as lvalues in assignments in C).
 
 All code in @R{} extensions is by default behind the write barrier.  The
 only way to obtain direct access to the internals of the @code{SEXPREC}s
-is to define @samp{USE_RINTERNALS} before including @file{Rinternals.h},
-which is normally defined in @file{Defn.h}.  To enable a check on the
-way that the access is used, @R{} can be compiled with flag
-@option{--enable-strict-barrier} which ensures that @file{Defn.h} does
-not define @samp{USE_RINTERNALS} and hence that @code{SEXP} is opaque in
-most of @R{} itself.  (There are some necessary exceptions: foremost
-@file{memory.c} where the accessor functions are defined and also
-@file{size.c} which needs access to the sizes of the internal
-structures.)
+is to define @samp{USE_RINTERNALS} before including header file
+@file{Rinternals.h}, which is normally defined in @file{Defn.h}.  To
+enable a check on the way that the access is used, @R{} can be compiled
+with flag @option{--enable-strict-barrier} which ensures that header
+@file{Defn.h} does not define @samp{USE_RINTERNALS} and hence that
+@code{SEXP} is opaque in most of @R{} itself.  (There are some necessary
+exceptions: foremost in file @file{memory.c} where the accessor
+functions are defined and also in file @file{size.c} which needs access
+to the sizes of the internal structures.)
 
 For background papers see
 @uref{http://www.stat.uiowa.edu/~luke/R/barrier.html} and
@@ -1128,7 +1138,7 @@ by the table entry.
 
 Serialization first writes a header indicating the format (normally
 @samp{X\n} for an XDR format binary save, but @samp{A\n}, ASCII, and
-@samp{B\n}, native word-order binary@footnote{there is no R-level
+@samp{B\n}, native word-order binary@footnote{there is no @R{}-level
 interface to this format}, can also occur) and the version number of the
 format and of two @R{} versions (as integers).  (Unserialization
 interprets the two versions as the version of @R{} which wrote the file
@@ -1182,7 +1192,7 @@ non-ASCII bytes.
 Character data in @R{} are stored in the sexptype @code{CHARSXP}.  Until
 @R{} 2.1.0 it was assumed that the data were in the platform's native
 8-bit encoding, and furthermore it was quite often assumed that the
-encoding was ISO Latin-1 or a superset (such as Windows' CP1252 or
+encoding was ISO Latin-1 or a near-superset (such as Windows' CP1252 or
 Latin-9).
 
 As from @R{} 2.1.0 there was support for other encodings, in particular
@@ -1230,14 +1240,15 @@ This was taken further in @R{} 2.7.0.  There the parser can return a
 UTF-8-encoded string if it encounters a @samp{\uxxx} escape for a
 Unicode point that cannot be represented in the current charset.  (This
 needs MBCS support, and was only enabled@footnote{See define
-@code{USE_UTF8_IF_POSSIBLE} in @file{gram.c}.} on Windows.)  This was
-taken further in @R{} 2.10.0, where it is enabled for all platforms with
-MBCS support, and a @samp{\uxxx} or @samp{\Uxxxxxxxx} escape ensures
-that the parsed string will be marked as UTF-8.
+@code{USE_UTF8_IF_POSSIBLE} in file @file{src/main/gram.c}.} on
+Windows.)  This was taken further in @R{} 2.10.0, where it is enabled
+for all platforms with MBCS support, and a @samp{\uxxx} or
+@samp{\Uxxxxxxxx} escape ensures that the parsed string will be marked
+as UTF-8.
 
 Most of the character manipulation functions now preserve UTF-8
-encodings: there are some notes as to which at the top of
-@file{src/main/character.c} and in
+encodings: there are some notes as to which at the top of file
+@file{src/main/character.c} and in file
 @file{src/library/base/man/Encoding.Rd}.
 
 Graphics devices are offered the possibility of handing UTF-8-encoded
@@ -1252,14 +1263,14 @@ Symbol encoding, but that can be re-encoded to UTF-8 by setting
 
 Windows has no UTF-8 locales, but rather expects to work with
 UCS-2@footnote{or UTF-16 if support for surrogates is enabled in the OS,
-which it is not normally at least for Western versions of Windows,
-despite some claims to the contrary on the Microsoft site.} strings.
+which it is not normally so at least for Western versions of Windows,
+despite some claims to the contrary on the Microsoft website.} strings.
 @R{} (being written in standard C) would not work internally with UCS-2
 without extensive changes.  As from @R{} 2.7.0 the @file{Rgui}
 console@footnote{but not the GraphApp toolkit.} uses UCS-2 internally,
 but communicates with the @R{} engine in the native encoding.  To allow
 UTF-8 strings to be printed in UTF-8 in @file{Rgui.exe}, an escape
-convention is used (see header @file{rgui_UTF8.h}) which is used by
+convention is used (see header file @file{rgui_UTF8.h}) which is used by
 @code{cat}, @code{print} and autoprinting.
 
 `Unicode' (UCS-2LE) files are common in the Windows world, and
@@ -1320,7 +1331,7 @@ R_NilValue}.
 @code{warning} and @code{error} look at the context stack.  If the
 topmost context is not of type @code{CTXT_BUILTIN}, it is used to
 provide the call, otherwise the next context provides the call.
-This means that when these function are called from a primitive or
+This means that when these functions are called from a primitive or
 @code{.Internal}, the imputed call will not be to
 primitive/@code{.Internal} but to the function calling the
 primitive/@code{.Internal} .  This is exactly what one wants for a
@@ -1497,16 +1508,16 @@ primitives which are internally S3 generic.  When a primitive that is
 internally S3 generic is called with a first argument which is an S4
 object and S4 dispatch is on (that is, the @pkg{methods} name space is
 loaded), @code{DispatchOrEval} calls @code{R_possible_dispatch} (defined
-in @file{src/main/objects.c}).  (Members of the S3 group generics, which
-includes all the generic operators, are treated slightly differently:
-the first two arguments are checked and @code{DispatchGroup} is called.)
-@code{R_possible_dispatch} first checks an internal table to see if any
-S4 methods are set for that generic (and S4 dispatch is currently
-enabled for that generic), and if so proceeds to S4 dispatch using
-methods stored in another internal table.  All primitives are in the
-base name space, and this mechanism means that S4 methods can be set for
-(some) primitives and will always be used, in contrast to setting
-methods on non-primitives.
+in file @file{src/main/objects.c}).  (Members of the S3 group generics,
+which includes all the generic operators, are treated slightly
+differently: the first two arguments are checked and
+@code{DispatchGroup} is called.)  @code{R_possible_dispatch} first
+checks an internal table to see if any S4 methods are set for that
+generic (and S4 dispatch is currently enabled for that generic), and if
+so proceeds to S4 dispatch using methods stored in another internal
+table.  All primitives are in the base name space, and this mechanism
+means that S4 methods can be set for (some) primitives and will always
+be used, in contrast to setting methods on non-primitives.
 
 The exception is @code{%*%}, which is S4 generic but not S3 generic as
 its C code contains a direct call to @code{R_possible_dispatch}.
@@ -1525,19 +1536,19 @@ they are S4 generic, again piggybacking on S3 dispatch.
 @code{.BasicFunsList} is generated when @pkg{methods} is installed, by
 computing all primitives, initially disallowing methods on all and then
 setting generics for members of @code{.GenericArgsEnv}, the S4 group
-generics and a short exceptions list in @file{BasicFunsList.R}: this
+generics and a short exceptions list in file @file{BasicFunsList.R}: this
 currently contains the subsetting and subassignment operators and an
 override for @code{c}.
 
 @node Memory allocators, Internal use of global and base environments, S4 objects, R Internal Structures
 @section Memory allocators
 
-@R{}'s memory allocation is almost all done via routines in
+@R{}'s memory allocation is almost all done via routines in file
 @file{src/main/memory.c}.  It is important to keep track of where memory
 is allocated, as the Windows port (by default) makes use of a memory
 allocator that differs from @code{malloc} etc as provided by MinGW.
 Specifically, there are entry points @code{Rm_malloc}, @code{Rm_free},
-@code{Rm_calloc} and @code{Rm_free} provided by
+@code{Rm_calloc} and @code{Rm_free} provided by file
 @file{src/gnuwin32/malloc.c}.  This was done for two reasons.  The
 primary motivation was performance: the allocator provided by MSVCRT
 @emph{via} MinGW was far too slow at handling the many small allocations
@@ -1552,7 +1563,7 @@ and @file{src/extra/xdr}: note that this means that it is not used in
 packages.
 
 The rest of @R{} should where possible make use of the allocators made
-available by @file{src/main/memory.c}, which are also the methods
+available by file @file{src/main/memory.c}, which are also the methods
 recommended in 
 @ifset UseExternalXrefs
 @ref{Memory allocation, , Memory allocation, R-exts, Writing R Extensions}
@@ -1598,7 +1609,7 @@ that
 @noindent
 is called immediately after the allocation (as @R{}'s stack checking
 mechanism will warn far enough from the stack limit to allow for modest
-use of alloca).  (@code{do_makeunique} in @file{src/main/unique.c}
+use of alloca).  (@code{do_makeunique} in file @file{src/main/unique.c}
 provides an example of both points.)
 
 An alternative strategy has been used for various functions which
@@ -1629,7 +1640,7 @@ static R_StringBuffer ex_buff = @{NULL, 0, MAXELTSIZE@};
 
 @noindent
 which uses a default size of @code{MAXELTSIZE = 8192} bytes.  Most
-current uses have a static @code{ R_StringBuffer} structure, which
+current uses have a static @code{R_StringBuffer} structure, which
 allows the (default-sized) buffer to be shared between calls to e.g.@:
 @code{grep} and even between functions: this will need to be changed if
 @R{} ever allows concurrent evaluation threads.  So the idiom is
@@ -1817,13 +1828,13 @@ possibility of linking to the wrong entry points of the same name.  In
 addition, on some platforms reducing the number of entry points allows
 more efficient versions of PIC to be used: somewhat over half the entry
 points are hidden.  A convenient way to hide variables (as distinct from
-functions) is to declare them @code{extern0} in @file{Defn.h}.
+functions) is to declare them @code{extern0} in header file @file{Defn.h}.
 
 The visibility mechanism used is only available with some compilers and
-platforms, and in particular not on Windows, where are alternative
+platforms, and in particular not on Windows, where an alternative
 mechanism is used.  Entry points will not be made available in
 @file{R.dll} if they are listed in the file
-@file{src/gnuwin32/Rdll.hide}.  
+@file{src/gnuwin32/Rdll.hide}.
 @findex Rdll.hide
 Entries in that file start with a space and must be strictly in
 alphabetic order in the C locale (use @command{sort} on the file to
@@ -1840,9 +1851,9 @@ Note that this only has an effect on a shared-R-library build, and so
 care is needed not to hide entry points that are legitimately used by
 packages.  So it is best if the decision on visibility is made when a
 new entry point is created, including the decision if it should be
-included in @file{Rinternals.h}.  A list of the visible entry points on
-shared-R-library build on a reasonably standard Unix-alike can be made
-by something like
+included in header file @file{Rinternals.h}.  A list of the visible
+entry points on shared-R-library build on a reasonably standard
+Unix-alike can be made by something like
 
 @example
 nm -g libR.so | grep ' [BCDT] ' | cut -b20-
@@ -1857,7 +1868,7 @@ to be specified  by a prefix (often @samp{_imp_}) when being linked to
 (`imported') but not when being linked from (`exported').  The details
 depend on the compiler system, and have changed for MinGW during the
 lifetime of that port.  They are in the main hidden behind some macros
-defined in header @file{R_ext/libextern.h}.
+defined in header file @file{R_ext/libextern.h}.
 
 A (non-function) variable in the main @R{} sources that needs to be
 referred to outside @file{R.dll} (in a package, module or another DLL
@@ -1894,7 +1905,7 @@ contains an index.  The objects are stored in (usually) a
 uncompressed serialized length (in XDR, that is big-endian, byte order)
 and read by a call to the primitive @code{lazyLoadDBfetch}.  (Note that
 this makes lazy-loading unsuitable for really large objects: the
-unserialized length of an R object can exceed 4GB.)
+unserialized length of an @R{} object can exceed 4GB.)
 
 The index or `map' file @file{@var{name}.rdx} is a compressed serialized
 @R{} object to be read by @code{.readRDS}.  It is a list with three
@@ -1911,9 +1922,10 @@ possibility of future expansion to other methods): these formats add a
 fifth byte to the header for the type of compression, and stores
 serialized objects uncompressed if compression expands them.
 
-The loader for a lazy-load database of code or data is @code{lazyLoad}
-in base, but note that there is a separate copy to load @pkg{base}
-itself in @file{R_HOME/base/R/base}.
+The loader for a lazy-load database of code or data is function
+@code{lazyLoad} in the @pkg{base} package, but note that there is a
+separate copy to load @pkg{base} itself in file
+@file{R_HOME/base/R/base}.
 
 Lazy-load databases are created by the code in
 @file{src/library/tools/R/makeLazyLoad.R}: the main tool is the
@@ -1937,7 +1949,7 @@ to @code{tools:::fetchRdDB}.
 C code compiled into @R{} at build time can be called directly in what
 are termed @emph{primitives} or via the @code{.Internal} interface,
 which is very similar to the @code{.External} interface except in
-syntax.  More precisely, @R{} maintains a table of R function names and
+syntax.  More precisely, @R{} maintains a table of @R{} function names and
 corresponding C functions to call, which by convention all start with
 @samp{do_} and return a @code{SEXP}.  This table (@code{R_FunTab} in
 file @file{src/main/names.c}) also specifies how many arguments to a
@@ -1961,14 +1973,15 @@ axis <- function(side, at = NULL, labels = NULL, ...)
 However, for reasons of convenience and also efficiency (as there is
 some overhead in using the @code{.Internal} interface wrapped in a
 function closure), the primitive functions are exceptions that can be
-accessed directly.  And of course, primitive functions are needed to
+accessed directly.  And of course, primitive functions are needed for
 basic operations---for example @code{.Internal} is itself a primitive.
 Note that primitive functions make no use of @R{} code, and hence are
 very different from the usual interpreted functions.  In particular,
 @code{formals} and @code{body} return @code{NULL} for such objects, and
-argument matching can be handled differently.  For primitives (including
-@code{call}, @code{switch}, @code{.C} and @code{.subset}) positional
-matching is important to avoid partial matching of the first argument.
+argument matching can be handled differently.  For some primitives
+(including @code{call}, @code{switch}, @code{.C} and @code{.subset})
+positional matching is important to avoid partial matching of the first
+argument.
 
 The list of primitive functions is subject to change; currently, it
 includes the following.
@@ -2003,7 +2016,7 @@ arithmetic and logic:
 @end example
 
 @item
-``Low level'' 0- and 1-argument functions which belong to one of the
+``Low level'' 0-- and 1--argument functions which belong to one of the
 following groups of functions:
 
 @enumerate a
@@ -2061,7 +2074,7 @@ is.language    is.list        is.logical     is.matrix
 is.na          is.name        is.nan         is.null       
 is.numeric     is.object      is.pairlist    is.raw        
 is.real        is.recursive   is.single      is.symbol     
-globalenv      baseenv        emptyenv       pos.to.env
+baseenv        emptyenv       globalenv      pos.to.env
 unclass        invisible      seq_along      seq_len
 @end group
 @end example
@@ -2163,7 +2176,7 @@ documentation: this is also done for replacement functions with one
 argument plus @code{value}.
 
 The net effect is that from @R{} 2.11.0 argument matching for primitives
-intended for end-user user is done in the same way as for interpreted
+intended for end-user use is done in the same way as for interpreted
 functions except for the six exceptions where positional matching is
 required.
 
@@ -2211,16 +2224,15 @@ for the @code{deparse.level} argument), @code{eapply}, @code{lapply} and
 @node Prototypes for primitives,  , Special internals, .Internal vs .Primitive
 @section Prototypes for primitives
 
-As from @R{} 2.5.0, prototypes are available for the primitive functions
-and operators, and these are used for printing, @code{args} and package
-checking (e.g.@: by @code{tools::checkS3methods} and by package
-@pkg{codetools}).  There are two environments in the @pkg{base} package
-(and name space), @samp{.GenericArgsEnv} for those primitives which are
-internal S3 generics, and @samp{.ArgsEnv} for the rest.  Those
-environments contain closures with the same names as the primitives,
-formal arguments derived (manually) from the help pages, a body which
-is a suitable call to @code{UseMethod} or @code{NULL} and environment the
-base name space.
+Prototypes are available for the primitive functions and operators, and
+these are used for printing, @code{args} and package checking (e.g.@: by
+@code{tools::checkS3methods} and by package @pkg{codetools}).  There are
+two environments in the @pkg{base} package (and name space),
+@samp{.GenericArgsEnv} for those primitives which are internal S3
+generics, and @samp{.ArgsEnv} for the rest.  Those environments contain
+closures with the same names as the primitives, formal arguments derived
+(manually) from the help pages, a body which is a suitable call to
+@code{UseMethod} or @code{NULL} and environment the base name space.
 
 The C code for @code{print.default} and @code{args} uses the closures in
 these environments in preference to the definitions in base (as
@@ -2237,7 +2249,7 @@ break  for function  if  next  repeat  return  while
 @end example
 
 @noindent
-.  One could argue about @code{~}, but it is known to the parser and has
+).  One could argue about @code{~}, but it is known to the parser and has
 semantics quite unlike a normal function.  And @code{:} is documented
 with different argument names in its two meanings.)
 
@@ -2303,15 +2315,15 @@ constructed @emph{via} @code{gettextf}, @code{gettext} or
 @code{ngettext}.
 
 For each package, the extracted messages and translation sources are
-stored under package directory @file{po} in the source package, and compiled
-translations under @file{inst/po} for installation to package directory
-@file{po} in the installed package.  This also applies to C code in
-packages.
+stored under package directory @file{po} in the source package, and
+compiled translations under @file{inst/po} for installation to package
+directory @file{po} in the installed package.  This also applies to C
+code in packages.
 
 @node Main C code, Windows-GUI-specific code, R code, Internationalization in the R sources
 @section Main C code
 
-The main C code (e.g.@: that in @file{src/*/*.c} and in
+The main C code (e.g.@: that in files @file{src/*/*.c} and in
 the modules) is where @R{} is closest to the sort of application for
 which @samp{gettext} was written.  Messages in the main C code are in
 domain @code{R} and stored in the top-level directory @file{po} with
@@ -2331,7 +2343,7 @@ macro, for example
 @end example
 
 @noindent
-from @file{src/main/errors.c}.
+from file @file{src/main/errors.c}.
 
 The @code{P_} macro
 
@@ -2349,9 +2361,9 @@ as a wrapper for @code{ngettext}: however in some cases the preferred
 approach has been to conditionalize (on @code{ENABLE_NLS}) code using
 @code{ngettext}.
 
-The macro @code{_("msg")} can safely be used in @file{src/appl}; the
-header for standalone @samp{nmath} skips possible translation.  (This
-does not apply to @code{N_} or @code{P_}).
+The macro @code{_("msg")} can safely be used in directory
+@file{src/appl}; the header for standalone @samp{nmath} skips possible
+translation.  (This does not apply to @code{N_} or @code{P_}).
 
 
 @node Windows-GUI-specific code, Mac OS X GUI, Main C code, Internationalization in the R sources
@@ -2373,12 +2385,12 @@ works well under Windows, this is less important than anticipated.)
 @end itemize
 
 Messages for the @samp{RGui} domain are marked by @code{G_("msg")}, a
-macro that is defined in @file{src/gnuwin32/win-nls.h}.  The list of
-files that are considered is hardcoded in the @code{RGui.pot-update}
-target of @file{po/Makefile.in.in}: note that this includes
-@file{devWindows.c} as the menus on the @code{windows} device are
-considered to be part of the GUI.  (There is also @code{GN_("msg")}, the
-analogue of @code{N_("msg")}.)
+macro that is defined in header file @file{src/gnuwin32/win-nls.h}.  The
+list of files that are considered is hardcoded in the
+@code{RGui.pot-update} target of file @file{po/Makefile.in.in}: note
+that this includes @file{devWindows.c} as the menus on the
+@code{windows} device are considered to be part of the GUI.  (There is
+also @code{GN_("msg")}, the analogue of @code{N_("msg")}.)
 
 The template and message catalogs for the @samp{RGui} domain are in the
 top-level @file{po} directory.
@@ -2394,7 +2406,7 @@ This is handled separately: see
 @node Updating,  , Mac OS X GUI, Internationalization in the R sources
 @section Updating
 
-See @file{po/README} for how to update the message templates and catalogs.
+See file @file{po/README} for how to update the message templates and catalogs.
 
 @node Package Structure, Graphics Devices, Internationalization in the R sources, Top
 @chapter Structure of an Installed Package
@@ -2524,7 +2536,7 @@ File @file{vignette.rds} records a dataframe with one row for each
 @samp{File} (the full file path in the sources), @samp{Title},
 @samp{PDF} (the pathless file name of the installed PDF version, if
 present), @samp{Depends}, @samp{Keywords} and @samp{R} (the pathless
-file name of the installed R code, if present).
+file name of the installed @R{} code, if present).
  
 
 @node Help,  , Metadata, Package Structure
